# NDS-JDM-Racing-Game

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh
source/: eeprom_storage.c  eeprom_storage.h  main.c  main_menu.c  main_menu.h  menu.c  menu.h  save_data.h  save_menu.c  save_menu.h  save_system.c  save_system.h  slot_system.c  slot_system.h
source/core/: math_utils.h  save_data.h  slot_system.c  slot_system.h
source/game/: car.c  car.h
source/menu/: main_menu.c  main_menu.h  menu.c  menu.h  save_menu.c  save_menu.h
